--- a/BLAZAMGui/UI/Outputs/AppDocumentationButton.razor
+++ b/BLAZAMGui/UI/Outputs/AppDocumentationButton.razor
@@ -6,7 +6,7 @@
                 Href=@("https://docs.blazam.org"+@Page)
                 Target="_blank"
                 Class="ma-4"
-                DisableElevation=true
+                DropShadow=false
                 Size="@Size"
                 IconSize="@IconSize"
                 IconColor="@IconColor"
