--- a/BLAZAMGui/UI/Outputs/ApplicationNewsProvider.razor
+++ b/BLAZAMGui/UI/Outputs/ApplicationNewsProvider.razor
@@ -19,8 +19,7 @@
                 color = Color.Warning;
             }
 
-            <AppTooltip Color=Color.Surface
-                        Text=@("Blazam "+AppLocalization["News"])>
+            <AppTooltip Text=@("Blazam "+AppLocalization["News"])>
                 <MudFab Size=Size.Small Color=@color
                         Class="mx-2"
                         StartIcon="@icon" />
