--- a/BLAZAMGui/UI/Settings/DirectorySettings.razor
+++ b/BLAZAMGui/UI/Settings/DirectorySettings.razor
@@ -139,7 +139,11 @@
 
                 <SettingsField>
 
-                    <MudButton Disabled="SaveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+                    <MudButton Disabled="SaveDisabled"
+                        ButtonType="ButtonType.Submit"
+                        Color="Color.Success">
+                        @AppLocalization["Save Changes"]
+                    </MudButton>
 
                 </SettingsField>
             </MudStack>
