--- a/BLAZAMGui/UI/Settings/EmailSettings.razor
+++ b/BLAZAMGui/UI/Settings/EmailSettings.razor
@@ -88,9 +88,12 @@
 
         </SettingsField>
 
-        <MudTextField Label="@AppLocalization["Test Recipient"]" Disabled=@(!settings.Enabled) @bind-Value=testRecipient />
+        <MudTextField Label="@AppLocalization["Test Recipient"]" 
+        Disabled=@(!settings.Enabled) 
+        @bind-Value=testRecipient />
 
-        <MudButton Disabled=@((!settings.Enabled && !settings.Valid())||LoadingData) @onclick="SendTestEmail" Color="Color.Success">Send Test Email</MudButton>
+        <MudButton Disabled=@((!settings.Enabled && !settings.Valid())||LoadingData) @onclick="SendTestEmail"
+        Color="Color.Success">Send Test Email</MudButton>
         @if (ApplicationInfo.InDebugMode && emailPreview != null)
         {
             <MudContainer MaxWidth="MaxWidth.Large" Style="min-height:500px;">
@@ -101,7 +104,11 @@
         }
         <SettingsField>
 
-            <MudButton Disabled="SaveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+            <MudButton Disabled="SaveDisabled"
+                ButtonType="ButtonType.Submit"
+                Color="Color.Success">
+                @AppLocalization["Save Changes"]
+            </MudButton>
 
         </SettingsField>
         <MudOverlay DarkBackground=true Visible=LoadingData>
