--- a/BLAZAMGui/UI/Settings/Permissions/DelegateEditor.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/DelegateEditor.razor
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.EntityFrameworkCore;
 
 @inherits AppComponentBase
-<MudText Typo="Typo.h3">Delegates  <AppDocumentationButton Page="/admin/permissions" /></MudText>
+<MudText Typo="Typo.h3">@AppLocalization["Delegates"]<AppDocumentationButton Page="/admin/permissions" /></MudText>
 <MudText> Delegates are your approved application users. Only the users your define here, or users in the following Active Directory groups (or nested groups) will be allowed to log in to the application.</MudText>
 <MudText> The access allowed to each delegate is controlled by the mapped access level.</MudText>
 
