--- a/BLAZAM/Pages/Home.razor
+++ b/BLAZAM/Pages/Home.razor
@@ -1,5 +1,5 @@
 ﻿@attribute [Authorize]
-@inherits AppComponentBase
+@inherits DatabaseComponentBase
 @page "/Home"
 @using BLAZAM.Gui.UI.Dashboard
 @using BLAZAM.Gui.Helper
