--- a/BLAZAM/Pages/Install/Install.razor
+++ b/BLAZAM/Pages/Install/Install.razor
@@ -1,7 +1,7 @@
 ﻿@page "/install"
 @page "/install/{selectedStep}"
 @layout InstallLayout
-@inherits AppComponentBase
+@inherits DatabaseComponentBase
 @inject ApplicationManager ApplicationManager
 
 <PageTitle>Install - Blazam</PageTitle>
