--- a/BLAZAMGui/UI/Settings/Notifications/NotificationSettings.razor
+++ b/BLAZAMGui/UI/Settings/Notifications/NotificationSettings.razor
@@ -1,4 +1,4 @@
-﻿@inherits AppComponentBase
+﻿@inherits DatabaseComponentBase
 <h3>@AppLocalization["Manage Notifications"]</h3>
 <MudAutocomplete @bind-Value=_selectedUser
                  MaxItems="50"
