--- a/BLAZAMGui/UI/Settings/Notifications/NotificationTemplates.razor
+++ b/BLAZAMGui/UI/Settings/Notifications/NotificationTemplates.razor
@@ -1,4 +1,4 @@
-﻿@inherits AppComponentBase
+﻿@inherits DatabaseComponentBase
 <h3>NotificationTemplates</h3>
 <MudSelectList Values="templates" @bind-SelectedValues=selectedValues/>
 @code {
