--- a/BLAZAMGui/UI/Settings/Notifications/OUNotificationSubscriptions.razor
+++ b/BLAZAMGui/UI/Settings/Notifications/OUNotificationSubscriptions.razor
@@ -1,4 +1,4 @@
-@inherits AppComponentBase
+@inherits DatabaseComponentBase
 @inject OUNotificationService ouNotificationService
 <MudSimpleTable>
 
