--- a/BLAZAMGui/UI/Settings/Permissions/AccessLevelEditor.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/AccessLevelEditor.razor
@@ -1,4 +1,4 @@
-@inherits AppComponentBase
+@inherits DatabaseComponentBase
 
 <MudText Typo="Typo.h6" Size="HeadingSize.Is3">
     @AppLocalization["Access Levels"]
