--- a/BLAZAMGui/UI/Inputs/AppCloseButton.razor
+++ b/BLAZAMGui/UI/Inputs/AppCloseButton.razor
@@ -13,4 +13,13 @@
     [Parameter]
     public EventCallback<MouseEventArgs> OnClick { get; set; }
 
+
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        if (Color == Color.Inherit)
+            Color = Color.Error;
+
+    }
+
 }
