--- a/BLAZAMGui/UI/Dashboard/Widgets/Admin/AppLogonsWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/Admin/AppLogonsWidget.razor
@@ -28,7 +28,7 @@
         </TemplateColumn>
         <TemplateColumn Title="Logged On">
             <CellTemplate>
-                            <MudText>@context.Item?.Timestamp</MudText>
+                            <MudText>@context.Item?.Timestamp.ToLocalTime()</MudText>
             </CellTemplate>
         </TemplateColumn>
        
