--- a/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
@@ -36,7 +36,7 @@
                 </MudContextMenu>
             </CellTemplate>
         </TemplateColumn>
-        <TemplateColumn Title="Password changed in the last 90 days">
+        <TemplateColumn Title="Password changed">
             <CellTemplate>
                 <MudText>@(((IADUser)context.Item).PasswordLastSet)</MudText>
             </CellTemplate>
@@ -44,7 +44,7 @@
 
     </Columns>
     <PagerContent>
-        <MudDataGridPager T="IDirectoryEntryAdapter" />
+        <MudDataGridPager PageSizeOptions=[5,10,25,50,100] T="IDirectoryEntryAdapter" />
     </PagerContent>
 </MudDataGrid>
 
