--- a/BLAZAMGui/UI/Dashboard/Widgets/DeletedEntriesWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/DeletedEntriesWidget.razor
@@ -37,7 +37,7 @@
 
     </Columns>
     <PagerContent>
-        <MudDataGridPager T="IDirectoryEntryAdapter" />
+        <MudDataGridPager PageSizeOptions=[5,10,25,50,100] T="IDirectoryEntryAdapter" />
     </PagerContent>
 </MudDataGrid>
 
