--- a/BLAZAMGui/UI/Outputs/Jobs/JobDetails.razor
+++ b/BLAZAMGui/UI/Outputs/Jobs/JobDetails.razor
@@ -53,9 +53,9 @@
 
         <TemplateColumn Title="Elapsed Time">
             <CellTemplate>
-
-                <MudText>@(context.Item.ElapsedTime.HasValue == true ? context.Item.ElapsedTime.Value.ToString("mm\\:ss") : "")</MudText>
-
+                <JobElapsedTime Step=context.Item/>
+               @*  <MudText>@(context.Item.ElapsedTime.HasValue == true ? context.Item.ElapsedTime.Value.ToString("mm\\:ss") : "")</MudText>
+ *@
             </CellTemplate>
         </TemplateColumn>
         <HierarchyColumn Class="" ButtonDisabledFunc="@(x => x is not IJob)" />
