--- a/BLAZAMGui/UI/Outputs/Jobs/JobResultDialog.razor
+++ b/BLAZAMGui/UI/Outputs/Jobs/JobResultDialog.razor
@@ -1,43 +1,41 @@
 ﻿@inherits AppComponentBase
 
-<CascadingValue Value="Job">
 
-    <MudDialog>
-        <DialogContent>
-            <JobDetails Job="Job" />
-            @if (Job.Result == JobResult.Running)
-            {
-                <MudProgressLinear Value=@(Job.Progress.HasValue==true?Job.Progress.Value:0) Max="100" />
-            }
-            <MudStack Row=true>
-                <JobStartTime />
-                <JobElapsedTime />
-                <JobRanBy />
-            </MudStack>
-       
-        </DialogContent>
-        <DialogActions>
+<MudDialog>
+    <DialogContent>
+        <JobDetails Job="Job" />
+        @if (Job.Result == JobResult.Running)
+        {
+            <MudProgressLinear Value=@(Job.Progress.HasValue==true?Job.Progress.Value:0) Max="100" />
+        }
+        <MudStack Row=true>
+            <JobStartTime Step="Job as IJobStep" />
+            <MudText Typo=Typo.caption>@AppLocalization["Elapsed Time"]: </MudText><JobElapsedTime Step="Job as IJobStep" />
+            <JobRanBy />
+        </MudStack>
 
-
-            
-            @switch (Job.Result)
-            {
-                case JobResult.Cancelled:
-                case JobResult.Passed:
-                case JobResult.Failed:
-                    <MudButton Color="@Color.Primary" Variant="Variant.Filled" OnClick="Dismiss">@AppLocalization["Ok"]</MudButton>
-
-                    break;
+    </DialogContent>
+    <DialogActions>
 
 
-                default:
-                    <MudButton Color="@Color.Error" Variant="Variant.Filled" OnClick="Cancel">@AppLocalization["Cancel"]</MudButton>
 
-                    break;
-            }
-        </DialogActions>
-    </MudDialog>
-</CascadingValue>
+        @switch (Job.Result)
+        {
+            case JobResult.Cancelled:
+            case JobResult.Passed:
+            case JobResult.Failed:
+                <MudButton Color="@Color.Primary" Variant="Variant.Filled" OnClick="Dismiss">@AppLocalization["Ok"]</MudButton>
+
+                break;
+
+
+            default:
+                <MudButton Color="@Color.Error" Variant="Variant.Filled" OnClick="Cancel">@AppLocalization["Cancel"]</MudButton>
+
+                break;
+        }
+    </DialogActions>
+</MudDialog>
 @code {
     [CascadingParameter] MudDialogInstance MudDialog { get; set; }
 
@@ -52,7 +50,7 @@
         MudDialog.SetOptions(newOptions);
 
         base.OnInitialized();
-       
+
         if (Job != null)
         {
             Job.OnProgressUpdated += ((value) =>
